tests/artifacts/ingress-with-problems.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"web","namespace":"test1"},"spec":{"rules":[{"host":"web.my.cool.domain.com","http":{"paths":[{"backend":{"serviceName":"web","servicePort":80},"path":"/"},{"backend":{"serviceName":"not-web","servicePort":80},"path":"/missing-service"},{"backend":{"serviceName":"web","servicePort":81},"path":"/missing-service-port"}]}}]}}
  creationTimestamp: "2020-04-03T19:44:01Z"
  generation: 1
  name: web
  namespace: test1
  resourceVersion: "459482"
  selfLink: /apis/extensions/v1beta1/namespaces/test1/ingresses/web
  uid: 3d7ed81f-e2a6-46bc-84dd-8a2b99511daa
spec:
  rules:
  - host: web.my.cool.domain.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /not-ready
      - backend:
          serviceName: not-web
          servicePort: 80
        path: /missing-service
      - backend:
          serviceName: web
          servicePort: 81
        path: /missing-service-port
status:
  loadBalancer: {}
backendIssues:
- Backend:
    ServiceName: not-web
    ServicePort: 80
  IssueType: serviceWithNoReadyAddresses
- Backend:
    ServiceName: not-web
    ServicePort: 80
  IssueType: serviceMissing
- Backend:
    ServiceName: web
    ServicePort: 81
  IssueType: serviceWithPortMismatch
